@@ -1,3 +1,8 @@
+2006-11-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* log_repaint.c: Check the return value of strrchr(). (should
+	fix #380410 and duplicates)
+
 2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* misc.c: Fix compilation on 64bit machines. (#352837,
